test/sema/typeck/var/variable-outside-of-scope.out
error: unknown identifier `a`.
--> variable-outside-of-scope.dora:1:43
 | fn f(): Int32 { { let _a = 1i32; } return a; }
                                             ~
 | 
1 error found.
