test/sema/typeck/var/variable-outside-of-scope.dora
fn f(): Int32 { { let _a = 1i32; } return a; }
